--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,9 +21,12 @@ gsonVersion = "2.11.0"
 
 ksp = "2.0.21-1.0.25"
 roomCompose = "2.6.1"
+room = "2.6.1"
 lottie = "6.6.0"
 splashscreen = "1.0.1"
 datastore = "1.1.1"
+appcompat = "1.7.0"
+material = "1.12.0"
 [libraries]
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gsonVersion" }
 datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
@@ -33,9 +36,13 @@ libphonenumber-carrier = { group = "com.googlecode.libphonenumber", name = "carr
 libphonenumber-geocoder = { group = "com.googlecode.libphonenumber", name = "geocoder", version.ref = "geocoder" }
 libphonenumber-prefixmapper = { group = "com.googlecode.libphonenumber", name = "prefixmapper", version.ref = "prefixmapper" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
-room-ktx-compose = { group = "androidx.room", name = "room-ktx", version.ref = "roomCompose" }
-room-runtime-compose = { group = "androidx.room", name = "room-runtime", version.ref = "roomCompose" }
-room-compiler-compose = { group = "androidx.room", name = "room-compiler", version.ref = "roomCompose" }
+#room-ktx-compose = { group = "androidx.room", name = "room-ktx", version.ref = "roomCompose" }
+#room-runtime-compose = { group = "androidx.room", name = "room-runtime", version.ref = "roomCompose" }
+#room-compiler-compose = { group = "androidx.room", name = "room-compiler", version.ref = "roomCompose" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+
 viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewmodelCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -52,10 +59,13 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
