--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,8 +22,11 @@ splashscreen = "1.0.1"
 datastore = "1.1.1"
 appcompat = "1.7.0"
 material = "1.12.0"
+tinypinyin = "2.0.3"
 [libraries]
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gsonVersion" }
+tinypinyin = { group = "com.github.promeg", name = "tinypinyin", version.ref = "tinypinyin" }
+tinypinyin-android = { group = "com.github.promeg", name = "tinypinyin-lexicons-android-cncity", version.ref = "tinypinyin" }
 datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
